# rust_discord_bot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: commands.rs  config.rs  database.rs  emoji_reaction.rs  error.rs  events.rs  main.rs  types.rs  utils.rs
src/commands/: add_role_buttons.rs  anime_hug.rs  ask.rs  blame_serena.rs  createimage.rs  help.rs  is_alive.rs  ping.rs  purge.rs  random_capy_image.rs  random_cat_image.rs  relay.rs  reminder.rs  rules.rs  set_delete_log_channel.rs  set_level_up_channel.rs  set_reaction_log.rs  set_url_rule.rs  set_warn_channel.rs  toggle_emoji_reactions.rs  update_raid_time.rs  user_info.rs  warn.rs  weather.rs
