[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
serenity = { version = "0.12.0", features = ["full"]}
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current", features = ["default"] }
toml = "0.8.19"
tokio-postgres = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.127"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
