[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
serenity = { version = "0.12.0", features = ["full"]}
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current", features = ["default"] }
toml = "0.8.19"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.127"
reqwest = { version = "0.12.0", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
async-openai = "0.24"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
futures-util = "0.3.30"
futures = "0.3.30"
rand = "0.8.5"
sysinfo = "0.31"
psutil = "3.3"
num-traits = "0.2.19"
bytes = "1.7.1"


[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"